--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -213,7 +213,7 @@
                         </div>
                       </div>
                       <!--  spec end -->
-                      <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0">
+                      <div class="col-xl-5 col-lg-4 col-md-6 col-12 mb-0">
                         <button type="submit" class="me-2" mat-raised-button color="primary">
                           Search
                         </button>
@@ -231,11 +231,15 @@
                         <button type="button" class="me-2" mat-raised-button color="primary" (click)="getInventoryExport()">
                           Quick Download
                         </button>
-                       
+                        <span *ngIf="this.selectedProduct == 'LENS SEMI-FINISHED'">
+                          <button *ngIf="company.ID == 241 || company.ID == 300 "  type="button"   (click)="openModalS1(content01)" mat-raised-button color="primary" [disabled]="inventoryList.length == 0">Semi-Finished</button>
+                      </span>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-6 col-12 mb-0 " *ngIf="this.selectedProduct == 'LENS'">
                         <button *ngIf="company.ID == 241 || company.ID == 1 " type="button"   (click)="openModalS(content0000)" mat-raised-button color="primary" >Base Grid</button>
                       </div>
+
+
                     </div>
                   </form>
                   <!--  list -->
@@ -1688,3 +1692,187 @@
 </div>
   
 </ng-template>
+
+
+<ng-template #content01 role="document" let-modal>
+  <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+      <div class="container ">
+          <div class="row">
+              <div class="col-4">
+                  <h2 class="modal-title header pt-2" id="exampleModalLabel"> {{this.BaseS}} Semi-Finished Grid</h2>
+              </div>
+              <!-- <div class=" col-2 pt-3  mb-0">
+                  <mat-form-field class="example-full-width mb-0">
+                      <mat-label>Index</mat-label>
+                      <mat-select name="SVTypeS" [(ngModel)]="SVTypeS"  #SVTypecontrol >
+                          <mat-option value="1.56">1.56 Index</mat-option>
+                      </mat-select>
+                  </mat-form-field>
+              </div>
+              <div *ngIf="SVTypeS == '1.56'" class=" col-2 pt-3  mb-0">
+                  <mat-form-field class="example-full-width mb-0">
+                      <mat-label>Select Base Type</mat-label>
+                      <mat-select name="BaseS" [(ngModel)]="BaseS"  #Basecontrol (selectionChange)="baseChangeS(this.BaseS)">
+                          <mat-option value="Progressive">Progressive</mat-option>
+                          <mat-option value="Bifocal">Bifocal</mat-option>
+                          <mat-option value="Single Vision">Single Vision</mat-option>
+                      </mat-select>
+                  </mat-form-field>
+              </div> -->
+           
+          </div>
+      </div>
+      <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body p-0">
+      <div class="row">
+          <div class="col-12">
+              <form #fg="ngForm">
+              <div class="row">
+                 
+                      <!-- <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 mt-1 ms-2">
+                          <mat-form-field class="example-full-width mb-0 paddingInp">
+                              <mat-label>Select Product</mat-label>
+                              <mat-select name="ProductCategory" [(ngModel)]="data.ProductCategory"
+                                  (selectionChange)="getFieldList()" required #Typecontrol>
+                                  <mat-option>
+                                      <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                      </ngx-mat-select-search>
+                                  </mat-option>
+                                  <mat-option *ngFor="let prod of prodList | proditemfilter: searchValue   let i = index;"
+                                      [value]="prod.ID">
+                                      {{prod.Name | uppercase}}
+                                  </mat-option>
+                              </mat-select>
+                              <mat-error>
+                                  Select Product Type
+                              </mat-error>
+                          </mat-form-field>
+                      </div>
+                 
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 mt-1"
+                          *ngFor="let spec of specList ; let i = index;">
+                          <div *ngIf="spec.FieldType === 'DropDown'" class="d-flex">
+                              <mat-form-field class=" me-2 mb-0" *ngIf="spec.DisplayAdd === 0">
+                                  <mat-label>{{spec.FieldName}}</mat-label>
+                                  <mat-select name="{{spec.FieldName+'0'}}"
+                                      [(ngModel)]="spec.SelectedValue"
+                                      (selectionChange)="getFieldSupportData(i)" editable="true"
+                                      [required]="spec.Required === 1" #singleSelect>
+                                      <mat-option>
+                                          <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue" (ngModelChange)="spec.EnteredValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                          </ngx-mat-select-search>
+                                      </mat-option>
+                                      <mat-option>
+                                      </mat-option>
+                                      <mat-option *ngFor="let val of spec.SptFilterData | proditemfilterPurchase: spec.EnteredValue"
+                                          [value]="val.TableValue">
+                                          {{val.TableValue}}
+                                      </mat-option>
+                                  </mat-select>
+                                  <mat-error>
+                                      {{spec.FieldName}} is Required
+                                  </mat-error>
+                              </mat-form-field>
+                          </div>
+                          <div *ngIf="spec.FieldType === 'Text'" class="d-flex">
+                              <mat-form-field class=" mr-0 mb-0">
+                                  <mat-label>{{spec.FieldName}}</mat-label>
+                                  <input matInput name="{{spec.FieldName+'2'}}"
+                                      [(ngModel)]="spec.SelectedValue" [required]="spec.Required === 1"
+                                      (blur)="getFieldSupportData(i)">
+                                  <mat-error>
+                                      {{spec.FieldName}} is Required
+                                  </mat-error>
+                              </mat-form-field>
+                          </div>
+                          <div *ngIf="spec.FieldType === 'Date'" class="d-flex">
+                              <mat-form-field class=" mr-0 mb-0">
+                                  <mat-label>{{spec.FieldName}}</mat-label>
+                                  <input type="date" matInput name="{{spec.FieldName+'3'}}"
+                                      [(ngModel)]="spec.SelectedValue" editable="true"
+                                      [required]="spec.Required === 1">
+                                  <mat-error>
+                                      {{spec.FieldName}} is Required
+                                  </mat-error>
+                              </mat-form-field>
+                          </div>
+                          <div *ngIf="spec.FieldType === 'boolean'" class="d-flex">
+                              <mat-slide-toggle name="{{spec.FieldName+'3'}}" color="primary"
+                                  class="example-margin" #Multiplecontrolx
+                                  [(ngModel)]="spec.SelectedValue">
+                                  {{spec.FieldName}}</mat-slide-toggle>
+                          </div>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 mt-1 ms-2">
+                          <button  type="button" mat-raised-button color="primary" [disabled]="!fg.valid" (click)="getProductLists()">Get</button>
+                      </div> -->
+                  </div>
+              </form>
+          </div>
+         
+          <!--  spec end -->
+          <div class="col-12 mx-auto">
+              <div class="container p-0" *ngIf="dataSourceS.length">
+                  <table mat-table [dataSource]="dataSourceS" class="mat-elevation-z8"
+                      style="overflow: auto; height: 480px; width: 100%;">
+                      <!-- CYL Column -->
+                      <ng-container matColumnDef="cyl">
+                          <th mat-header-cell *matHeaderCellDef
+                              style="font-size: 16px;color:rgb(0 0 0); border: 1px solid; padding: 5px;text-align: center !important;">
+                              <b *ngIf="this.BaseS != 'Single Vision'">Add</b>  <br> <b> Base </b>
+                          </th>
+                          <td mat-cell *matCellDef="let element"
+                              style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"
+                              class="hovertblrow-col"> {{element.sph}} </td>
+                      </ng-container>
+                      <!-- Dynamic Columns for SPH -->
+                      <ng-container *ngFor="let cyl of cylValuesS; let i = index" [matColumnDef]="cyl">
+                          <th mat-header-cell *matHeaderCellDef
+                              style="font-size: 16px; padding-top: 10px; color: rgb(0 0 0); border: 1px solid; text-align: center !important; background-color: #dddddd;">
+                              {{ cyl }}
+                          </th>
+                          <!-- <td mat-cell *matCellDef="let element"
+                        [style.backgroundColor]="element[cyl].isBlue ? '#fff' : 'transparent'"
+                        [style.border]="element[cyl].isBlue ? '1px solid' : 'none'">
+                      <ng-container *ngIf="element[cyl].isBlue">
+                        <input class="inputBoxTD" type="number" [(ngModel)]="element[cyl].value" min="0"
+                               [ngStyle]="{ 'color': element[cyl].value == 0 ? '#242424' : 'red', 'font-weight': element[cyl].value == 0 ? 'normal' : '900' }"
+                               style="border: none !important;background: none;" disabled />
+                      </ng-container>
+                    </td> -->
+                          <td mat-cell *matCellDef="let element"
+                              [style.backgroundColor]="element[cyl].isBlue ? '#fff' : 'transparent'"
+                              [style.border]="element[cyl].isBlue ? '1px solid' : 'none'"
+                              [style.cursor]="element[cyl].isBlue ? 'pointer' : 'none '"
+                              [ngClass]="{'disabled': element[cyl].value == 0 }"
+                              (click)="element[cyl].value !== 0">
+                              <ng-container *ngIf="element[cyl].isBlue">
+                                  <span class="inputBoxTD"
+                                      [ngStyle]="{ 'color': element[cyl].value == 0 ? '#242424' : 'red', 'font-weight': element[cyl].value == 0 ? 'normal' : '900' }"
+                                      style="border: none !important;background: none; ">
+                                      {{element[cyl].value}}
+                                  </span>
+                              </ng-container>
+                          </td>
+                      </ng-container>
+                      <tr mat-header-row *matHeaderRowDef="displayedColumnsS" style="height: -1px !important;"
+                          class="hovertblrow-col"></tr>
+                      <tr mat-row *matRowDef="let row; columns: displayedColumnsS;"
+                          [ngClass]="{'highlight-row': isHoveredRow(row)}" (click)="hoveredRow = row"
+                          (mouseleave)="hoveredRow = null" style="height: -1px !important;" class="hovertblrow-col">
+                      </tr>
+                  </table>
+              </div>
+          </div>
+          <!-- product-quantity-grid.component.html -->
+  
+        
+      </div>
+      
+     
+  </div>
+
+</ng-template>
+
+
