--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -120,7 +120,7 @@
               </div>
               <a *ngIf="viewFlag.viewLoyalty" href="javascript:void(0)" [routerLink]="['/sale/commission']" id="collapseExample3">Loyalty</a>
               <a *ngIf="viewFlag.viewLoyaltyInvoice" href="javascript:void(0)" (click)="refresh('commissionList')" [routerLink]="['/sale/commissionList',0]" id="collapseExample3">Loyalty  Invoice</a>
-              <a *ngIf="viewFlag.viewLoyalty" href="javascript:void(0)" [routerLink]="['/sale/customerReturn',0]" id="collapseExample3">customerReturn</a>
+              <a *ngIf="viewFlag.viewLoyalty" href="javascript:void(0)" [routerLink]="['/sale/customerRetrunList']" id="collapseExample3">customerReturn</a>
               <!-- <a *ngIf="viewFlag.viewLoyalty" href="javascript:void(0)" [routerLink]="['/sale/orderSale',0,0]" id="collapseExample3">Order Sale</a> -->
             </div>
           </div>
