--- a/web1/src/app/sale/customer-return/customer-return.component.css
+++ b/web1/src/app/sale/customer-return/customer-return.component.css
@@ -10,3 +10,8 @@
     transition: 0.5s;
     box-shadow: 2px 2px 6px #9c9795fa;
 }
+
+.deleteClass {
+    color: red !important;
+    text-decoration: line-through !important;
+}
