--- a/web1/src/app/sale/customer-return/customer-return.component.html
+++ b/web1/src/app/sale/customer-return/customer-return.component.html
@@ -48,13 +48,13 @@
                                       </mat-select>
                                     </mat-form-field>
                                   </div>
-                                  <!-- <div class="col-xl-1 col-lg-4 col-md-3 col-6 mb-0">
+                                  <div class="col-xl-1 col-lg-4 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>System Debit No.</mat-label>
+                                        <mat-label>SystemCn</mat-label>
                                         <input matInput name="SystemCn " [(ngModel)]="selectedPurchaseMaster.SystemCn"
                                         required   (ngModelChange)="selectedPurchaseMaster.SystemCn = onChange($event)" autocomplete="off">
                                     </mat-form-field>
-                                </div> -->
+                                </div>
                                 <div class="col-xl-2 col-lg-4 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Customer CN No.</mat-label>
@@ -62,10 +62,10 @@
                                           disabled  (ngModelChange)="selectedPurchaseMaster.CustomerCn = onChange($event)" autocomplete="off">
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-4 col-md-3 col-6 mb-0">
+                                <div class="col-xl-1 col-lg-4 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label> CN Date </mat-label>
-                                        <input matInput type="date" name="RetrunDate " [(ngModel)]="selectedPurchaseMaster.RetrunDate"
+                                        <input matInput type="date" name="BillDate" [(ngModel)]="selectedPurchaseMaster.BillDate"
                                         required >
                                     </mat-form-field>
                                 </div>
