--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -139,10 +139,10 @@
 			 </div>
                         <div
                             style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
-                              <% if (data.CompanyID !== 63 && data.CompanyID !== 153){%>
+                              <% if (data.CompanyID !== 63 && data.CompanyID !== 153 && data.CompanyID !== 320){%>
                                  <%=i.ProductBrandName%>
                             <%}%>
-                            <% if (data.CompanyID === 63 || data.CompanyID == 153){%>
+                            <% if (data.CompanyID === 63 || data.CompanyID == 153 || data.CompanyID == 320){%>
                                 <%=i.ProductUniqueBarcode%>
                             <%}%>
                         </div>
