--- a/web1/src/app/sale/customer-retrun-list/customer-retrun-list.component.html
+++ b/web1/src/app/sale/customer-retrun-list/customer-retrun-list.component.html
@@ -115,7 +115,7 @@
 <!-- Modal -->
 <ng-template #content role="document" let-modal>
   <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
-    <h2 class="modal-title header pt-2" id="exampleModalLabel">Supplier CN No</h2>
+    <h2 class="modal-title header pt-2" id="exampleModalLabel">Customer CN No</h2>
     <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body p-0">
